--- a/templates/assignment8.html
+++ b/templates/assignment8.html
@@ -1,6 +1,11 @@
 {% extends "base.html" %}
+{% block title %}
+    assignment8
+{% endblock %}
+
 {% block content %}
-    <div>
+
+ <div>
             {% set myName ={'firstName': "liron", 'lastName':"amiel"} %}
             <h1>Hello my name from jinja is {{ myName.firstName | capitalize }} {{ myName.lastName | upper}}</h1>
         </div>
@@ -23,4 +28,5 @@
             {% endfor %}
         </ul>
         </div>
+
 {% endblock %}
