--- a/templates/header.html
+++ b/templates/header.html
@@ -1,4 +1,4 @@
 <header>
     <a href = "/assignment9"> assignment9</a> | <a href="/assginment8">assignment8</a>
-    | <a href="/search">search</a> | <a href="/login">login</a>
+    | <a href="/search">search</a> | <a href="/login">login</a> |<a href = "/assigment10"> assigment10</a>
 </header>
